--- a/css/themify-icons.css
+++ b/css/themify-icons.css
@@ -1,9 +1,9 @@
 @font-face {
 	font-family: 'themify';
-	src:url('../fonts/themify.eot?-fvbane');
-	src:url('../fonts/themify.eot?') format('embedded-opentype'),
-		url('../fonts/themify.woff?-fvbane') format('woff'),
-		url('../fonts/themify.ttf?-fvbane') format('truetype'),
+	src:url('../fonts/themify.eot%3F-fvbane');
+	src:url('../fonts/themify.eot%3F') format('embedded-opentype'),
+		url('../fonts/themify.woff%3F-fvbane') format('woff'),
+		url('../fonts/themify.ttf%3F-fvbane') format('truetype'),
 		url('https://gama-avocatsafrique.com/fonts/themify.svg?-fvbane') format('svg');
 	font-weight: normal;
 	font-style: normal;
